=== NoNa ===
== Version 1.9 ==
Changelog: December 28, 2013
= Code =
* Code reformatted to better meet WordPress Coding Standards (see https://gist.github.com/Cais/8023722)
* Remove `nona_login` function - see BNS Login http://wordpress.org/extend/plugins/bns-login

/** ------------------------------------------------------------------------- */
== Version 1.8.1 ==
Changelog: July 18, 2013
= Code =
* Added constant 'NONA_HOME_URL'
* Hide middle footer widget area frame if it is empty
* Refactored Featured Image display code into function `nona_show_featured_image( $size )`
* Used 'NONA_HOME_URL' where appropriate

= CSS =
* Added 'hidden' class
* Adjusted `img` and 'caption' related properties

/** ------------------------------------------------------------------------- */
== Version 1.8 ==
Changelog: March 15, 2013
= Code =
* Added code block termination comments
* Changed conditional to use `is_multisite` for Multisite testing
* Move Comment Reply script enqueue to 'functions.php'
* Refactored code formatting
* Refactored no post title code
* Refactored to be more i18n compatible
* Refactored widget area definitions into `nona_widgets` function and attached to `widgets_init` action hook
* Remove 'searchform.php' template in favor of using WordPress core version
* Updated DOCTYPE and other related header elements

= CSS =
* Minor adjustments to handle default widgets (based on the "Monster" widget)
* Minor adjustment to handle default 'searchform' output

= Miscellaneous =
* Deprecate `nona_login`, recommend using plugin BNS Login instead.
* Update "WordPress Required Version" to 3.4

/** ------------------------------------------------------------------------- */
== Version 1.7 ==
Changelog: December 10, 2012
= Code =
* Fixed spacing issue in meta details if post has no tags
* Refactored sidebar definitions to include names and descriptions for all areas
* Refactored `wp_nav_menu` support code

= Miscellaneous =