@@ -4,6 +4,7 @@ Changelog: December 28, 2013
 = Code =
 * Code reformatted to better meet WordPress Coding Standards (see https://gist.github.com/Cais/8023722)
 * Remove `nona_login` function - see BNS Login http://wordpress.org/extend/plugins/bns-login
+* Removed the unused variable `$sep_location`
 
 /** ------------------------------------------------------------------------- */
 == Version 1.8.1 ==
